# Assembly-C

./: README.md
1st task/neves_ti1/ti1/: Makefile  caas  caas_lexer.c  caas_lexer.h  caas_parser.c  caas_parser.h  caas_parser.output  caoss
1st task/neves_ti1/ti1/examples/: a.out  add.caoss  add_byte.caoss  add_byte.out  error.caoss  ex1.caoss  ex1.out  ex2.caoss  ex2.out  neg.caoss  sal.caoss
1st task/neves_ti1/ti1/include/: alu.h  caoss.h  os.h  types.h  utils.h
1st task/neves_ti1/ti1/src/caas/: caas.l
1st task/neves_ti1/ti1/src/caoss/: alu.c  caoss.c  cpu.c  memory.c  os.c
2nd task/neves_ti2/: countWords.s  sumStride.s
3rd task/neves_ti3/ti3/: CMakeLists.txt  Makefile  caoss
3rd task/neves_ti3/ti3/examples/: bzip.caoss  bzip.out  small.caoss  small.out
3rd task/neves_ti3/ti3/include/: caas.h  cache.h  cpu.h  memory.h  stats.h  types.h
3rd task/neves_ti3/ti3/src/caas/: caas.c  caas.y  opcodes.c
3rd task/neves_ti3/ti3/src/caoss/: alu.c  cache.c  caoss.c  cpu.c  memory.c  os.c  stats.c  utils.c
